# riskos

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_pd_trend_and_ear.ipynb
scripts/: run_demo.py
src/riskos/: pipeline.py
src/riskos/metrics/: exposure_at_risk.py
src/riskos/signals/: pd_trend.py
